--- a/starter_code/package.json
+++ b/starter_code/package.json
@@ -13,6 +13,7 @@
     "eslint": "^5.0.1",
     "express": "^4.16.3",
     "hbs": "^4.0.1",
+    "morgan": "^1.9.0",
     "prettyjson": "^1.2.1",
     "spotify-web-api-node": "^3.1.1"
   }
